--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
